# ros2_apps

./: .gitignore  .gitmodules  readme.md  test_cuda.sh
ros2_ws/: .gitignore  build.sh  clean.sh  run.sh
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/cpp_pubsub/lib/cpp_pubsub/: talker
ros2_ws/install/cpp_pubsub/share/cpp_pubsub/: local_setup.sh  package.sh
ros2_ws/install/examples_rclcpp_async_client/lib/examples_rclcpp_async_client/: client_main
ros2_ws/install/examples_rclcpp_async_client/share/examples_rclcpp_async_client/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ros2_ws/install/examples_rclcpp_cbg_executor/include/examples_rclcpp_cbg_executor/: ping_node.hpp  pong_node.hpp
ros2_ws/install/examples_rclcpp_cbg_executor/lib/examples_rclcpp_cbg_executor/: ping  ping_pong  pong
ros2_ws/install/examples_rclcpp_cbg_executor/share/examples_rclcpp_cbg_executor/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ros2_ws/install/examples_rclcpp_minimal_action_client/lib/examples_rclcpp_minimal_action_client/: action_client_member_functions  action_client_not_composable  action_client_not_composable_with_cancel  action_client_not_composable_with_feedback
ros2_ws/install/examples_rclcpp_minimal_action_client/share/examples_rclcpp_minimal_action_client/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ros2_ws/install/examples_rclcpp_minimal_action_server/lib/examples_rclcpp_minimal_action_server/: action_server_member_functions  action_server_not_composable
ros2_ws/install/examples_rclcpp_minimal_action_server/share/examples_rclcpp_minimal_action_server/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ros2_ws/install/examples_rclcpp_minimal_client/lib/examples_rclcpp_minimal_client/: client_main
ros2_ws/install/examples_rclcpp_minimal_client/share/examples_rclcpp_minimal_client/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ros2_ws/install/examples_rclcpp_minimal_composition/lib/examples_rclcpp_minimal_composition/: composition_composed  composition_publisher  composition_subscriber
ros2_ws/install/examples_rclcpp_minimal_composition/share/examples_rclcpp_minimal_composition/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ros2_ws/install/examples_rclcpp_minimal_publisher/lib/examples_rclcpp_minimal_publisher/: publisher_lambda  publisher_member_function  publisher_member_function_with_type_adapter  publisher_member_function_with_unique_network_flow_endpoints  publisher_not_composable  publisher_wait_for_all_acked
ros2_ws/install/examples_rclcpp_minimal_publisher/share/examples_rclcpp_minimal_publisher/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ros2_ws/install/examples_rclcpp_minimal_service/lib/examples_rclcpp_minimal_service/: service_main
ros2_ws/install/examples_rclcpp_minimal_service/share/examples_rclcpp_minimal_service/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ros2_ws/install/examples_rclcpp_minimal_subscriber/lib/examples_rclcpp_minimal_subscriber/: static_wait_set_subscriber  subscriber_content_filtering  subscriber_lambda  subscriber_member_function  subscriber_member_function_with_topic_statistics  subscriber_member_function_with_type_adapter  subscriber_member_function_with_unique_network_flow_endpoints  subscriber_not_composable  time_triggered_wait_set_subscriber  wait_set_subscriber
ros2_ws/install/examples_rclcpp_minimal_subscriber/share/examples_rclcpp_minimal_subscriber/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ros2_ws/install/examples_rclcpp_minimal_timer/lib/examples_rclcpp_minimal_timer/: timer_lambda  timer_member_function
ros2_ws/install/examples_rclcpp_wait_set/lib/examples_rclcpp_wait_set/: wait_set  (+9 more)
ros2_ws/log/: latest_build  latest_test
ros2_ws/src/cpp_od/: CMakeLists.txt  package.xml
ros2_ws/src/cpp_od/include/: detector.hpp
ros2_ws/src/cpp_od/src/: demo.cpp  subscriber_lambda_function.cpp
ros2_ws/src/cpp_od/yolov8/: CMakeLists.txt
ros2_ws/src/cpp_parameters/: CMakeLists.txt  package.xml
ros2_ws/src/cpp_pubsub/: CMakeLists.txt
ros2_ws/src/cpp_srvcli/: package.xml
ros2_ws/src/custom_action_cpp/: package.xml
ros2_ws/src/custom_action_cpp/src/: fibonacci_action_server.cpp
ros2_ws/src/custom_action_interfaces/: package.xml
ros2_ws/src/custom_action_py/: package.xml  setup.py
ros2_ws/src/custom_action_py/custom_action_py/: fibonacci_action_client.py  fibonacci_action_server.py
ros2_ws/src/more_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/my_custom_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/my_custom_msgs/msg/: MyCustomMsg.msg
ros2_ws/src/my_custom_msgs/srv/: MyCustomSrv.srv
ros2_ws/src/my_custom_publisher/: CMakeLists.txt  package.xml
ros2_ws/src/my_custom_publisher/src/: my_custom_client.cpp  my_custom_publisher.cpp  my_custom_server.cpp  my_custom_subscriber.cpp
ros2_ws/src/my_package/: package.xml  setup.py
ros2_ws/src/my_package2/: CMakeLists.txt  package.xml
ros2_ws/src/perception/: package.xml  setup.py
ros2_ws/src/perception/perception/: camera_sim.py  camera_sub.py
ros2_ws/src/py_pubsub/: package.xml  setup.py
ros2_ws/src/py_pubsub_imgs/: package.xml  setup.cfg  setup.py
ros2_ws/src/py_pubsub_imgs/py_pubsub_imgs/: publisher_member_function.py  subscriber_member_function.py
ros2_ws/src/py_pubsub_imgs/rosbag2_2024_07_30-10_50_13/: metadata.yaml
ros2_ws/src/py_srvcli/: package.xml  setup.py
ros2_ws/src/python_parameters/: package.xml  setup.py
test_tensorrt/: build.sh  infer  infer.cpp  main.ipynb  pyrun.sh  test_tensorrt  test_tensorrt.cpp
tutorial_ws/: .gitignore  build.sh  clean.sh  run.sh  start.sh
tutorial_ws/src/my_cpp_pkg/: CMakeLists.txt  package.xml
tutorial_ws/src/my_cpp_pkg/src/: hello_world.cpp
(+142 files in other folders)
