<package format="3">
  <name>my_custom_publisher</name>
  <version>0.0.0</version>
  <description>Publisher for custom messages</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>my_custom_msgs</build_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>my_custom_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>